force-app/main/default/objects/FACT_Error_Log__c/FACT_Error_Log__c.object-meta.xml
<CustomObject>
    <description>Object to have error records</description>
    <label>FACT Error Log</label>
    <nameField>
        <displayFormat>FACT-ERR-{0000000000}</displayFormat>
        <label>FACT Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FACT Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>