force-app/main/default/objects/FACT_Error_Log__c/fields/FACT_ACN__c.field-meta.xml
<CustomField>
    <fullName>FACT_ACN__c</fullName>
    <description>Outlet ACN</description>
    <label>ACN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>