force-app/main/default/objects/FACT_Error_Log__c/fields/FACT_Error_Description__c.field-meta.xml
<CustomField>
    <fullName>FACT_Error_Description__c</fullName>
    <label>Error Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>