force-app/main/default/objects/FACT_Error_Log__c/fields/FACT_Error_Location__c.field-meta.xml
<CustomField>
    <fullName>FACT_Error_Location__c</fullName>
    <description>Process where error was encountered</description>
    <label>Error Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>