force-app/main/default/objects/FACT_Error_Log__c/fields/FACT_Serial_Number_Asset_Tag__c.field-meta.xml
<CustomField>
    <fullName>FACT_Serial_Number_Asset_Tag__c</fullName>
    <description>Serial Number of Outlet Dispenser</description>
    <label>Serial Number/Asset Tag</label>
    <length>20</length>
    <type>Text</type>
</CustomField>