force-app/main/default/objects/FACT_Error_Log__c/fields/FACT_Source_System__c.field-meta.xml
<CustomField>
    <fullName>FACT_Source_System__c</fullName>
    <label>Source System</label>
    <length>20</length>
    <type>Text</type>
</CustomField>